# scripts

./: .gitignore  CLAUDE.md  PLAN.md  README.md  color_test.sh  setup_macos.py
apps/: install.sh  setup_linux.sh  setup_macos.py  setup_macos.sh  smoke_test.sh  smoke_test_linux.sh
apps/tests/: test_app_selection.sh  test_app_selection_linux.sh  test_install_sandbox.sh  test_ssh_multiaccount.sh  test_ssh_multiaccount_linux.sh  test_terminal_detection.sh  test_terminal_detection_linux.sh
bash/: toggle-natural-scroll-simple.applescript  toggle-natural-scroll-simple.sh  toggle-natural-scroll.applescript  toogle-natural-scroll.sh
my-script-generator/: .eslintrc.json  CLAUDE.md  README.md  astro.config.mjs  package.json  supabase-schema.sql
my-script-generator/.vercel/output/: config.json
my-script-generator/src/components/: ProgressBar.tsx  ScriptGenerator.tsx
my-script-generator/src/lib/: applications.json  scriptGenerator.ts  supabase.ts  types.ts
my-script-generator/src/pages/: index.astro
my-scripts-ui/: CLAUDE.md  GUIA_COMPLETA_INSTAGRAM.md  INSTAGRAM_SETUP.md  README.md  package.json
powershell/: README.md  install-oh-my-posh.ps1  instrucciones.md
python/: virtual_env.md
rust/: Cargo.toml
rust/setup_core/: Cargo.toml
rust/setup_core/examples/: install_log_demo.rs  prompt_demo.rs  select_demo.rs  tui_smoke.rs
rust/setup_core/src/: lib.rs  model.rs  platform.rs  prompt.rs  runner.rs  shell.rs  tui.rs  ui.rs
rust/setup_macos/: Cargo.toml
rust/setup_macos/src/: main.rs
square/: dwn_images_ui.py  instructions.md  requirements.txt
(+72 files in other folders)
